crates/keron-lang/tests/corpus/errors/check/struct_missing_required_arg.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: missing required argument `y` for `Point`
  --> 3:16
  |
3 | val p: Point = Point(0)
  |                ^^^^^^^^^
